# 947

./: .gitignore  README.md
part1/: DESIGN_ANALYSIS.md
part2/: INSTRUCTIONS.md  Makefile  init.sql  pyproject.toml
part2/src/: .env.example  docker-compose.yml  main.py
part2/src/ai_agent/: agentic_rag_service.py  llm_service.py
part2/src/ai_agent/nodes/: node.py
part2/src/ai_agent/routers/: router.py
part2/src/chat/controller/: chat.py
part2/src/chat/model/: chat.py
part2/src/chat/repository/: chat_repository.py
part2/src/chat/service/: chat_service.py
part2/src/config/: app_config.yml  config_helper.py  logger.py  pgvector_client.py  pgvector_policy_client.py  settings.py
part2/src/exceptions/: custom_exception.py  custom_exception_handler.py
part2/src/external_services/: base.py  escalation_service.py  http_config.py  task_automation_service.py
part2/src/monitor/controller/: monitor.py
part2/src/monitor/model/: monitor.py
part2/src/monitor/repository/: monitor.py
part2/src/monitor/service/: monitor_service.py
part2/src/schemas/: chat_schemas.py  document_schemas.py  monitor_schemas.py  router_schema.py  search_schema.py  state.py  thought_schema.py
part2/src/utils/: app_error_messages.py  app_notification_message.py  app_utils.py  connection.py  database_manager.py  request_response.py
